--- a/proj01/package.json
+++ b/proj01/package.json
@@ -17,6 +17,7 @@
         "express-session": "^1.15.2",
         "express-winston": "^2.3.0",
         "moment": "^2.18.1",
+        "morgan": "^1.9.0",
         "path": "latest",
         "ejs": "latest"
     },
